添加V2打包方式

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,12 @@
             android:text="Get Channel By FC"
             android:onClick="getChannelByFC"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Get Channel By ID-value"
+            android:onClick="getChannelByIdValue"/>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
